change method wishReserve and charityReserve in ReserveServiceImpl